# pytorch_ops_perf

./: 1_Net.json  2_Net.json  CMakeLists.txt  README.md  app.py  code_gen.py  cpp_gen.cpp  generate_code_from_json.py  generic_model_for_jit.py  import_to_dict.py  mnist-sampler-output.json  ops.py  ops_conv1d.py
include/: common.h  perf_events.hpp
models/: mnist_miss_ml_compute_model_ops.json
src/: perf_events.cpp
